--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -14,6 +14,7 @@
 .modal-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 10px;
     background-color: white;
     height: auto;
